# thecoach

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  testhg.pem
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_activity_timeseries.py  033e73156fb7_add_gender_to_settings.py  0e29b134d908_add_body_battery_detail_fields.py  17a973997fc1_add_training_type_to_activities.py  30b516bd89a8_add_chat_messages_table.py  44d278f82625_add_daily_briefings_table.py  6ec1004d062c_add_withings_client_id_and_secret_to_.py  a5147ec9adc8_add_height_cm_to_settings.py  b062c64dcedf_add_garmin_ids_to_planned_workouts.py  ccba0c8b8df6_add_user_profile_fields_to_settings.py  cf653d3edf25_add_training_plan_tables.py  dc53b291bc8e_add_anthropic_api_key_to_settings.py
backend/app/: config.py  main.py
backend/app/api/: activities.py  auth.py  coach.py  dashboard.py  health.py  settings.py  sync.py  training.py  withings.py
backend/app/models/: __init__.py  activity.py  body_composition.py  briefing.py  chat.py  health_metric.py  settings.py  training.py
backend/app/schemas/: activity.py  coach.py  dashboard.py  health.py  settings.py  sync.py  training.py
backend/app/services/: analytics.py  coach_context.py  daily_briefing.py  garmin_calendar_sync.py  garmin_sync.py  training.py  withings_sync.py
backend/tests/: conftest.py  test_api.py  test_models.py
frontend/: Dockerfile.prod  package-lock.json  (+2 more)
(+36 files in other folders)
